<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragments.MedicalAttentionFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_duenio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_duenio"
        android:layout_margin="@dimen/dimen_5dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_duenio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_mascota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_mascota"
        android:layout_margin="@dimen/dimen_5dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:errorEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_mascota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_tipo_mascota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_5dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:hint="@string/tipo_mascota"
        app:errorEnabled="true">

        <AutoCompleteTextView
            android:id="@+id/act_tipo_mascota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_raza_mascota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/raza_mascota"
        android:layout_margin="@dimen/dimen_5dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:errorEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_raza_mascota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_edad_mascota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edad_mascota"
        android:layout_margin="@dimen/dimen_5dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:errorEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_edad_mascota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Subir foto"
        android:gravity="center"
        android:textSize="17sp"
        android:textStyle="bold"/>
    <ImageView
        android:id="@+id/img_capture_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/upload_image"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_guardar_mascota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/guardar"/>

    <!-- Modern Material Circular Progress Indicator (Hidden by default) -->
    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/loading_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone"
        app:indicatorColor="#5c4c9e" />
</LinearLayout>